--- a/src/components/forms/Form.module.css
+++ b/src/components/forms/Form.module.css
@@ -1,10 +1,10 @@
-label{
-    margin-top: 10px;
-}
-input{
+.label{
     margin: 10px;
 }
-button{
+/* .input{
+    margin: 10px;
+} */
+.button{
     margin: 20px;
     padding: 10px;
     background-color: greenyellow;
@@ -14,7 +14,7 @@ button{
     display: flex;
     justify-content: center;
 }
-form{
+.form{
     border: 1px solid black;
     padding: 10px;
     border-radius: 10px;
